//
//proto3proto2
//protobuf
//https://www.jianshu.com/p/4443c28d4bf7
syntax = "proto3";

//ï¼Œprotocgo
package go_protos;

option go_package = "./go_protos";

message BlockForWitness {
	uint64   GroupHeight            =1;  //
	bytes    Addr                   =2;  //
}
